appId: com.meditag.native
---
- launchApp:
    clearState: true
- tapOn:
    text: "Not Now"
    optional: true
- tapOn:
    text: "Cancel"
    optional: true
- tapOn:
    text: "Continue"
    optional: true
- tapOn:
    text: "OK"
    optional: true
- assertVisible: "Nurse workflow"
- assertVisible: "Ready to verify"
- assertVisible:
    id: start-wristband-scan-button
